--- a/BidirectionalRESTJson/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/BidirectionalRESTJson/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
 extraProperties=
-projectKey=com.test\:TestProject
+projectKey=com.ithinkisink\:BidirectionalRESTJson
 serverUrl=http\://localhost\:9000
 version=2
