--- a/PrimePushNotify/pom.xml
+++ b/PrimePushNotify/pom.xml
@@ -14,6 +14,12 @@
 			<url>http://repository.primefaces.org</url>
 			<layout>default</layout>
 		</repository>
+		
+		<repository>
+			<id>mvnrepository</id>
+			<name>mvnrepository.com Maven Repository</name>
+			<url>http://central.maven.org/maven2</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -96,7 +102,7 @@
 		<dependency>
 			<groupId>org.atmosphere</groupId>
 			<artifactId>atmosphere-runtime</artifactId>
-			<version>2.1.7</version>
+			<version>2.3.1</version>
 		</dependency>
 
 		<dependency>
@@ -108,7 +114,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>5.0</version>
+			<version>5.2</version>
 		</dependency>
 	</dependencies>
 
